--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "react": "^18.3.1",
